manifests/base/resources/dcaas-web/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9180"
    prometheus.io/scrape: "true"
  labels:
    app: dcaas-web
    chart: dcaas-web-1.1.84
    heritage: Helm
    release: dcaas-web
  name: dcaas-web
spec:
  ports:
  - name: dcaas-web
    port: 6384
    protocol: TCP
    targetPort: 6384
  selector:
    app: dcaas-web
    release: dcaas-web
  type: ClusterIP
---
